--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
+        <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head> 
     <!--All content displayed in the browser lays within the body element--> 
     <body>
@@ -21,7 +21,7 @@
             <!--This list is for the navigation bar-->
             <nav>
                 <ul>
-                    <li><img src="../img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                    <li><img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
                     <li><a href="index.html">HOME</a></li>
                     <li><a class="active" href="about.html">ABOUT</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
@@ -34,15 +34,15 @@
             <h1>About me!</h1>
             <p>
                 <a href="https://www.linkedin.com/in/mohammedalam04" target="_blank" title="View my professional experience on LinkedIn">
-                    <img src="../img/linkedin.png" alt="LinkedIn logo"></a>
+                    <img src="img/linkedin.png" alt="LinkedIn logo"></a>
             </p>
             <div id="left">
-                <img src="../img/me.png" alt="A picture of Mohammed Alam">
+                <img src="img/me.png" alt="A picture of Mohammed Alam">
             </div>
             <div id="right">
-                <video autoplay controls muted preload="auto" poster="../img/on_record.png" id="video">
-                    <source src="../video/on_record.mp4" type="video/mp4">
-                    <source src="../video/on_record.ogv" type="video/ogg">
+                <video autoplay controls muted preload="auto" poster="img/on_record.png" id="video">
+                    <source src="video/on_record.mp4" type="video/mp4">
+                    <source src="video/on_record.ogv" type="video/ogg">
                 </video>
                 <br>
                 <button onclick="playPause()">Play or pause the video</button>
@@ -61,7 +61,7 @@
         <div id="footer"> 
             <article>
                 <section id="top">
-                    <img src="../img/nav_img.png" alt="Cartoon image of Mohammed Alam">
+                    <img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam">
                     <p>
                         mohammed.alam1@ontariotechu.net
                     </p>
