--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
+        <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head> 
     <!--All content displayed in the browser lays within the body element--> 
     <body> 
@@ -21,7 +21,7 @@
             <!--This list is for the navigation bar-->
             <nav>
                 <ul>
-                    <li><img src="../img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                    <li><img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
@@ -59,7 +59,7 @@
         <div id="footer"> 
             <article>
                 <section id="top">
-                    <img src="../img/nav_img.png" alt="Cartoon image of Mohammed Alam">
+                    <img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam">
                     <p>
                         mohammed.alam1@ontariotechu.net
                     </p>
