--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,8 @@
         <div id="wrapper"> 
             <h1>Check out some of my work</h1>
             <p>
-                <a href="https://github.com/malam04" target="_blank" title="Go to my github page">
-                    <img src="../img/github.png" alt="Github Logo"></a>
+                <a href="https://github.com/mohammedalam04" target="_blank" title="Go to my github page">
+                    <img src="img/github.png" alt="Github Logo"></a>
             </p>
         </div>
         <div class="clear"></div>
