--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
                 <img src="img/me.png" alt="A picture of Mohammed Alam">
             </div>
             <div id="right">
-                <video autoplay controls muted preload="auto" poster="img/on_record.png" id="video">
-                    <source src="video/on_record.mp4" type="video/mp4">
-                    <source src="video/on_record.ogv" type="video/ogg">
+                <video autoplay controls muted preload="auto" poster="img/video_poster.png" id="video">
+                    <source src="video/myvideo.mp4" type="video/mp4">
+                    <source src="video/myvideo.ogv" type="video/ogg">
                 </video>
                 <br>
                 <button onclick="playPause()">Play or pause the video</button>
