--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
         <!-- full-size monitor style sheet--> 
-        <link href="full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> 
+        <link href="css/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> 
         <!-- tablet style sheet--> 
-        <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> 
+        <link href="css/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> 
         <!-- phone style sheet--> 
-        <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+        <link href="css/phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
     </head> 
     <!--All content displayed in the browser lays within the body element--> 
     <body> 
