--- a/about.html
+++ b/about.html
@@ -19,65 +19,45 @@
         <link href="css/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> 
         <!-- phone style sheet--> 
         <link href="css/phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
-    </head> 
-    <!--All content displayed in the browser lays within the body element--> 
-    <body>
-        <!--The header contains elements at the top of the page-->
-        <header>
-            <!--This list is for the navigation bar-->
-            <nav>
-                <ul>
-                    <li><img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a class="active" href="about.html">ABOUT</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
-        </header>
-        <!--This div contains all page elements--> 
-        <div id="wrapper"> 
-            <h1>About me!</h1>
-            <p>
-                <a href="https://www.linkedin.com/in/mohammedalam04" target="_blank" title="View my professional experience on LinkedIn">
-                    <img src="img/linkedin.png" alt="LinkedIn logo" width="200px"></a>
-            </p>
-            <div id="left">
-                <img src="img/me.png" alt="A picture of Mohammed Alam">
+        <body>
+            <!--This div contains all page elements--> 
+            <div id="wrapper">
+                <!--The header contains elements at the top of the page-->
+                <header id="left-column">
+                    <!--This list is for the navigation bar-->
+                    <nav>
+                        <ul>
+                            <li><img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                            <li><a class="button" href="index.html">HOME</a></li>
+                            <li><a class="button" id="active" href="about.html">ABOUT</a></li>
+                            <li><a class="button" href="projects.html">PROJECTS</a></li>
+                            <li><a class="button" href="contact.html">CONTACT</a></li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="right-column">
+                    <h1>About me!</h1>
+                    <div class="box">
+                        <a href="https://www.linkedin.com/in/mohammedalam04" target="_blank" title="View my professional experience on LinkedIn">
+                        <img src="img/linkedin.png" alt="LinkedIn logo" width="200px"></a>
+                    </div>
+                    <div class="box">
+                        <img src="img/me.png" alt="A picture of Mohammed Alam">
+                        <video autoplay controls muted preload="auto" poster="img/video_poster.png" id="video">
+                            <source src="vid/myvideo.mp4" type="video/mp4">
+                            <source src="vid/myvideo.ogv" type="video/ogg">
+                        </video>
+                    </div>
+                </div>
             </div>
-            <div id="right">
-                <video autoplay controls muted preload="auto" poster="img/video_poster.png" id="video">
-                    <source src="video/myvideo.mp4" type="video/mp4">
-                    <source src="video/myvideo.ogv" type="video/ogg">
-                </video>
-                <br>
-                <button onclick="playPause()">Play or pause the video</button>
-                <script>
-                    var myVideo=document.getElementById("video");
-                    function playPause()
-                    {
-                        if (myVideo.paused)
-                            myVideo.play();
-                        else myVideo.pause();
-                    }
-                </script>
+            <div class="clear"></div> 
+            <div id="footer">
+                <p>
+                  <img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+                  mohammed.alam1@ontariotechu.net<br>
+                  &copy; 2022 by Mohammed Alam with &hearts;
+                </p>
             </div>
         </div>
-        <div class="clear"></div>
-        <div id="footer"> 
-            <article>
-                <section id="top">
-                    <img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam">
-                    <p>
-                        mohammed.alam1@ontariotechu.net
-                    </p>
-                </section>
-                <section id="bottom">
-                    <p>
-                        &copy; 2022 by Mohammed Alam with &hearts;
-                    </p>
-                </section>
-            </article>
-        </div> 
     </body> 
-</html> 
+</html>
