--- a/contact.html
+++ b/contact.html
@@ -21,61 +21,56 @@
         <link href="css/phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
     </head> 
     <!--All content displayed in the browser lays within the body element--> 
-    <body> 
-        <!--The header contains elements at the top of the page-->
-        <header>
-            <!--This list is for the navigation bar-->
-            <nav>
-                <ul>
-                    <li><img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a class="active" href="contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
-        </header>
+    <body>
         <!--This div contains all page elements--> 
         <div id="wrapper">
-            <h3>Send me your questions, comments and project related queries!</h3>
-            <form action="mailto:mohammed.alam1@ontariotechu.net" method="post" enctype="text/plain" name="form">
+            <!--The header contains elements at the top of the page-->
+            <header class="left-column">
+                <!--This list is for the navigation bar-->
+                <nav>
+                    <ul>
+                        <li><img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                        <li><a class="button" href="index.html">HOME</a></li>
+                        <li><a class="button" href="about.html">ABOUT</a></li>
+                        <li><a class="button" href="projects.html">PROJECTS</a></li>
+                        <li><a class="button" id="active" href="contact.html">CONTACT</a></li>
+                </nav>
+            </header>
+            <div class="box">
+                <h3>Send me your questions, comments and project related queries!</h3>
+            </div>
+            <div class="box">
+                <form action="mailto:mohammed.alam1@ontariotechu.net" method="post" enctype="text/plain" name="form">
+                    <p>
+                        <label for="name">Your Name</label><br>
+                        <input type="text" id="name" name="name" size="50" placeholder="full name" required>
+                    </p>
+                    <p>
+                        <label for="email">Your Email</label><br>
+                        <input type="email" id="email" name="email" size="50" placeholder="email" required>
+                    </p>
+                    <p>
+                        <label for="comments">Message</label><br>
+                        <textarea id="comments" name="comments" cols="60" rows="6" placeholder="Leave a comment" required></textarea>
+                    </p>
+                    <p>
+                        <label for="norobots">Answer this question to prove you're one of us!</label>
+                        <input type="number" id="norobots" name="norobots" placeholder="2 + 2 = ?" required>
+                    </p>
+                    <p>
+                        <input type="submit" value="Submit"/>
+                        <input type="reset" value="Reset"/>
+                    </p>
+                </form>
+            </div>
+            <div class="clear"></div> 
+            <div id="footer">
                 <p>
-                    <label for="name">Your Name</label><br>
-                    <input type="text" id="name" name="name" size="50" placeholder="full name" required>
+                  <img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+                  mohammed.alam1@ontariotechu.net<br>
+                  &copy; 2022 by Mohammed Alam with &hearts;
                 </p>
-                <p>
-                    <label for="email">Your Email</label><br>
-                    <input type="email" id="email" name="email" size="50" placeholder="email" required>
-                </p>
-                <p>
-                    <label for="comments">Message</label><br>
-                    <textarea id="comments" name="comments" cols="60" rows="6" placeholder="Leave a comment" required></textarea>
-                </p>
-                <p>
-                    <label for="norobots">Answer this question to prove you're one of us!</label>
-                    <input type="number" id="norobots" name="norobots" placeholder="2 + 2 = ?" required>
-                </p>
-                <p>
-                    <input type="submit" value="Submit"/>
-                    <input type="reset" value="Reset"/>
-                </p>
-            </form>
+            </div>
         </div>
-        <div class="clear"></div>
-        <div id="footer"> 
-            <article>
-                <section id="top">
-                    <img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam">
-                    <p>
-                        mohammed.alam1@ontariotechu.net
-                    </p>
-                </section>
-                <section id="bottom">
-                    <p>
-                        &copy; 2022 by Mohammed Alam with &hearts;
-                    </p>
-                </section>
-            </article>
-        </div> 
     </body> 
 </html> 
