--- a/index.html
+++ b/index.html
@@ -2,58 +2,50 @@
 <!DOCTYPE HTML> 
 <!--HTML element contains all page elements/data--> 
 <html lang="en"> 
-    <!--The head element content is not visible in the browser window--> 
-    <head> 
-        <!--The UTF-8 character set provides the most support for all symbols and characters--> 
-        <meta charset="UTF-8">
-        <!--The title element is what displays in the browser tab-->
-        <title>Welcome</title> 
-        <!-- These lines link all separate files used to this one-->
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width">
-        <!-- full-size monitor style sheet--> 
-        <link href="css/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> 
-        <!-- tablet style sheet--> 
-        <link href="css/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> 
-        <!-- phone style sheet--> 
-        <link href="css/phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
-    </head> 
+  <!--The head element content is not visible in the browser window--> 
+  <head> 
+    <!--The UTF-8 character set provides the most support for all symbols and characters--> 
+    <meta charset="UTF-8">
+    <!--The title element is what displays in the browser tab-->
+    <title>Welcome</title> 
+    <!-- These lines link all separate files used to this one-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
+    <!-- full-size monitor style sheet--> 
+    <link href="css/full.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> 
+    <!-- tablet style sheet--> 
+    <link href="css/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)"> 
+    <!-- phone style sheet--> 
+    <link href="css/phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
+  </head> 
     <!--All content displayed in the browser lays within the body element--> 
-    <body> 
-        <!--The header contains elements at the top of the page-->
-        <header>
-            <!--This list is for the navigation bar-->
-            <nav>
-                <ul>
-                    <li><img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
-                    <li><a class="active" href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
-        </header>
+    <body>
         <!--This div contains all page elements--> 
-        <div id="wrapper"> 
-            <h1>Welcome to my website!</h1>
+        <div id="wrapper">
+            <!--The header contains elements at the top of the page-->
+            <header id="left-column">
+                <!--This list is for the navigation bar-->
+                <nav>
+                    <ul>
+                        <li><img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                        <li><a class="button" id="active" href="index.html">HOME</a></li>
+                        <li><a class="button" href="about.html">ABOUT</a></li>
+                        <li><a class="button" href="projects.html">PROJECTS</a></li>
+                        <li><a class="button" href="contact.html">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <h1 class="box">Welcome to my website!</h1>
+            <div class="clear"></div> 
+            <div id="footer">
+                <p>
+                  <img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+                  mohammed.alam1@ontariotechu.net<br>
+                  &copy; 2022 by Mohammed Alam with &hearts;
+                </p>
+            </div>
         </div>
-        <div class="clear"></div> 
-        <div id="footer"> 
-            <article>
-                <section id="top">
-                    <img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam">
-                    <p>
-                        mohammed.alam1@ontariotechu.net
-                    </p>
-                </section>
-                <section id="bottom">
-                    <p>
-                        &copy; 2022 by Mohammed Alam with &hearts;
-                    </p>
-                </section>
-            </article>
-        </div> 
     </body> 
 </html> 
