--- a/projects.html
+++ b/projects.html
@@ -22,42 +22,38 @@
     </head> 
     <!--All content displayed in the browser lays within the body element--> 
     <body>
-        <!--The header contains elements at the top of the page-->
-        <header>
-            <!--This list is for the navigation bar-->
-            <nav>
-                <ul>
-                    <li><img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a class="active" href="projects.html">PROJECTS</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
-            </nav>
-        </header>
         <!--This div contains all page elements--> 
-        <div id="wrapper"> 
-            <h1>Check out some of my work</h1>
-            <p>
-                <a href="https://github.com/mohammedalam04" target="_blank" title="Go to my github page">
-                    <img src="img/github.png" alt="Github Logo"></a>
-            </p>
+        <div id="wrapper">
+            <!--The header contains elements at the top of the page-->
+            <header class="left-column">
+                <!--This list is for the navigation bar-->
+                <nav>
+                    <ul>
+                      <li><img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                      <li><a class="button" href="index.html">HOME</a></li>
+                      <li><a class="button" href="about.html">ABOUT</a></li>
+                      <li><a class="button" id="active" href="projects.html">PROJECTS</a></li>
+                      <li><a class="button" href="contact.html">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="right-column">
+                <div class="box">
+                  <h1>Check out some of my work</h1>
+                </div>
+                <div class="box">
+                  <a href="https://github.com/mohammedalam04" target="_blank" title="Go to my github page">
+                  <img id="icon" src="img/github.png" alt="Github Logo"></a>
+                  </div>
+            </div>
+            <div class="clear"></div> 
+            <div id="footer">
+                <p>
+                  <img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+                  mohammed.alam1@ontariotechu.net<br>
+                  &copy; 2022 by Mohammed Alam with &hearts;
+                </p>
+            </div>
         </div>
-        <div class="clear"></div>
-        <div id="footer"> 
-            <article>
-                <section id="top">
-                    <img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam">
-                    <p>
-                        mohammed.alam1@ontariotechu.net
-                    </p>
-                </section>
-                <section id="bottom">
-                    <p>
-                        &copy; 2022 by Mohammed Alam with &hearts;
-                    </p>
-                </section>
-            </article>
-        </div> 
     </body> 
-</html> 
+</html>
