--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </ul>
                 </nav>
             </header>
-            <h1 class="box">Welcome to my website!</h1>
+            <h1 class="animate">Welcome to my website!</h1>
             <div class="clear"></div> 
             <div id="footer">
                 <p>
