--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                         </ul>
                     </nav>
                 </header>
-                <div class="right-column">
+                <div id="right-column">
                     <h1>About me!</h1>
                     <div class="box">
                         <a href="https://www.linkedin.com/in/mohammedalam04" target="_blank" title="View my professional experience on LinkedIn">
