--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <!--This div contains all page elements--> 
         <div id="wrapper">
             <!--The header contains elements at the top of the page-->
-            <header class="left-column">
+            <header id="left-column">
                 <!--This list is for the navigation bar-->
                 <nav>
                     <ul>
