--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <!--This div contains all page elements--> 
         <div id="wrapper">
             <!--The header contains elements at the top of the page-->
-            <header class="left-column">
+            <header id="left-column">
                 <!--This list is for the navigation bar-->
                 <nav>
                     <ul>
@@ -37,7 +37,7 @@
                     </ul>
                 </nav>
             </header>
-            <div class="right-column">
+            <div id="right-column">
                 <div class="box">
                   <h1>Check out some of my work</h1>
                 </div>
