--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,12 @@
                 <!--This list is for the navigation bar-->
                 <nav>
                     <ul>
-                        <li><img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                        <li><img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
                         <li><a class="button" href="index.html">HOME</a></li>
                         <li><a class="button" href="about.html">ABOUT</a></li>
                         <li><a class="button" href="projects.html">PROJECTS</a></li>
                         <li><a class="button" id="active" href="contact.html">CONTACT</a></li>
+                    </ul>
                 </nav>
             </header>
             <div class="box">
@@ -66,7 +67,7 @@
             <div class="clear"></div> 
             <div id="footer">
                 <p>
-                  <img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+                  <img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
                   mohammed.alam1@ontariotechu.net<br>
                   &copy; 2022 by Mohammed Alam with &hearts;
                 </p>
