--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                 <!--This list is for the navigation bar-->
                 <nav>
                     <ul>
-                      <li><img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                      <li><img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
                       <li><a class="button" href="index.html">HOME</a></li>
                       <li><a class="button" href="about.html">ABOUT</a></li>
                       <li><a class="button" id="active" href="projects.html">PROJECTS</a></li>
@@ -43,13 +43,13 @@
                 </div>
                 <div class="box">
                   <a href="https://github.com/mohammedalam04" target="_blank" title="Go to my github page">
-                  <img id="icon" src="img/github.png" alt="Github Logo"></a>
+                  <img class="icon" src="img/github.png" alt="Github Logo"></a>
                   </div>
             </div>
             <div class="clear"></div> 
             <div id="footer">
                 <p>
-                  <img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+                  <img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
                   mohammed.alam1@ontariotechu.net<br>
                   &copy; 2022 by Mohammed Alam with &hearts;
                 </p>
