--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     <!--This list is for the navigation bar-->
                     <nav>
                         <ul>
-                            <li><img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
+                            <li><img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
                             <li><a class="button" href="index.html">HOME</a></li>
                             <li><a class="button" id="active" href="about.html">ABOUT</a></li>
                             <li><a class="button" href="projects.html">PROJECTS</a></li>
@@ -39,7 +39,7 @@
                     <h1>About me!</h1>
                     <div class="box">
                         <a href="https://www.linkedin.com/in/mohammedalam04" target="_blank" title="View my professional experience on LinkedIn">
-                        <img src="img/linkedin.png" alt="LinkedIn logo" width="200px"></a>
+                        <img src="img/linkedin.png" alt="LinkedIn logo"></a>
                     </div>
                     <div class="box">
                         <img src="img/me.png" alt="A picture of Mohammed Alam">
@@ -49,15 +49,14 @@
                         </video>
                     </div>
                 </div>
-            </div>
-            <div class="clear"></div> 
-            <div id="footer">
-                <p>
-                  <img id="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
-                  mohammed.alam1@ontariotechu.net<br>
-                  &copy; 2022 by Mohammed Alam with &hearts;
-                </p>
-            </div>
+                <div class="clear"></div> 
+                <div id="footer">
+                    <p>
+                    <img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+                    mohammed.alam1@ontariotechu.net<br>
+                    &copy; 2022 by Mohammed Alam with &hearts;
+                    </p>
+                </div>
         </div>
     </body> 
 </html>
