--- a/index.html
+++ b/index.html
@@ -20,32 +20,30 @@
     <!-- phone style sheet--> 
     <link href="css/phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
   </head> 
-    <!--All content displayed in the browser lays within the body element--> 
-    <body>
-        <!--This div contains all page elements--> 
-        <div id="wrapper">
-            <!--The header contains elements at the top of the page-->
-            <header id="left-column">
-                <!--This list is for the navigation bar-->
-                <nav>
-                    <ul>
-                        <li><img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"></li>
-                        <li><a class="button" id="active" href="index.html">HOME</a></li>
-                        <li><a class="button" href="about.html">ABOUT</a></li>
-                        <li><a class="button" href="projects.html">PROJECTS</a></li>
-                        <li><a class="button" href="contact.html">CONTACT</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <h1 class="animate">Welcome to my website!</h1>
-            <div class="clear"></div> 
-            <div id="footer">
-                <p>
-                  <img class="icon" src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
-                  mohammed.alam1@ontariotechu.net<br>
-                  &copy; 2022 by Mohammed Alam with &hearts;
-                </p>
-            </div>
-        </div>
-    </body> 
-</html> 
+  <!--All content displayed in the browser lays within the body element--> 
+  <body>
+    <!--This div contains all page elements--> 
+    <div id="wrapper">
+      <!--The header contains elements at the top of the page-->
+      <header>
+          <ul>
+            <li><a class="button" id="active" href="index.html"><img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam">HOME</a></li>
+            <li><a class="button" href="about.html">ABOUT</a></li>
+            <li><a class="button" href="projects.html">PROJECTS</a></li>
+            <li><a class="button" href="contact.html">CONTACT</a></li>
+          </ul>
+      </header>
+      <h1 class="animate">Welcome to my website!</h1>
+      <div class="clear"></div>
+      <footer>
+        <p id="footer_top">
+          <img src="img/nav_img.png" alt="Cartoon image of Mohammed Alam"><br>
+          mohammed.alam1@ontariotechu.net<br>
+        </p>
+        <p>
+          &copy; 2022 by Mohammed Alam with &hearts;
+        </p>
+      </footer>
+    </div>
+  </body> 
+</html>
